# shh

./: .gitignore  .travis.yml  ChangeLog.md  README.md  cabal.project  default.nix  hssh.cabal  release.hs  release.sh  shell.nix  shh.cabal  shh.nix  test.sh
.builds/: ghc.yml  nix-unstable.yml  nix.yml
app/: Example.hs
docs/: porting.md
examples/nix/: my-script.cabal  my-script.hs
shh/: ChangeLog.md  LICENSE  README.md  Setup.hs  shh.cabal
shh-extras/: CHANGELOG.md  README.md  shh-extras.cabal
shh-extras/src/Shh/: Prompt.hs
shh/app/: Example.hs  shh-app.hs
shh/examples/nix/: ChangeLog.md  LICENSE  README.md  default.nix
shh/src/: Shh.hs
shh/src/Shh/: Internal.hs  Interpolate.hs
shh/test/: Test.hs
src/: Hssh.hs  Shh.hs
src/Hssh/: Example.hs  Internal.hs  TH.hs
src/Shh/: Example.hs  Internal.hs
test/: Test.hs
