name:                shh
version:             0.1.0.1
synopsis:            Simple shell scripting from Haskell
description:         Provides a shell scripting environment for Haskell. It
                     helps you all external binaries, and allows you to
                     perform many shell-like functions, such as piping
                     and redirection.
license:             BSD3
license-file:        LICENSE
author:              Luke Clifton
maintainer:          lukec@themk.net
copyright:           (c) 2018 Luke Clifton
category:            System
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/luke-clifton/shh

library
  exposed-modules:     Shh
                     , Shh.Internal
  build-depends:       base >=4.9 && <4.13
                     , async
                     , deepseq
                     , directory
                     , filepath
                     , mtl
                     , process
                     , split
                     , template-haskell
                     , unix
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall

executable shh-example
  ghc-options: -threaded -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:
    base >=4.9,
    shh
  hs-source-dirs: app
  main-is: Example.hs
  

test-suite shh-tests
  ghc-options: -threaded -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:
    base >=4.9,
    tasty,
    tasty-quickcheck,
    tasty-hunit,
    shh
  hs-source-dirs: test
  main-is: Test.hs
  type: exitcode-stdio-1.0
