cabal-version:       >=1.10
name:                shh-extras
version:             0.1.0.2
synopsis:            Utility functions for using shh
description:         Provides useful functions for setting up Shh as an
                     interactive shell.
license:             BSD3
license-file:        LICENSE
author:              Luke Clifton
maintainer:          lukec@themk.net
copyright:           (c) 2018, 2019 Luke Clifton
category:            System
build-type:          Simple
extra-source-files:  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/luke-clifton/shh

library
  exposed-modules: Shh.Prompt
  build-depends:
    base >=4.11 && <4.19,
    shh  >= 0.2.0.0,
    time,
    hostname
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite shh-extra-tests
  ghc-options: -threaded -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:
    base >=4.9,
    tasty
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0
