name:                shh
version:             0.7.0.1
synopsis:            Simple shell scripting from Haskell
description:         Provides a shell scripting environment for Haskell. It
                     helps you use external binaries, and allows you to
                     perform many shell-like functions, such as piping
                     and redirection.
license:             BSD3
license-file:        LICENSE
author:              Luke Clifton
maintainer:          lukec@themk.net
copyright:           (c) 2018, 2019 Luke Clifton
category:            System
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/luke-clifton/shh

library
  exposed-modules:     Shh
                     , Shh.Internal
  build-depends:
    base             >= 4.9 && < 4.13,
    async            >= 2.2.1 && < 2.3,
    bytestring,
    deepseq          >= 1.4.3 && < 1.5,
    directory        >= 1.3.1 && < 1.4,
    filepath         >= 1.4.2 && < 1.5,
    mtl              >= 2.2.2 && < 2.3,
    process          >= 1.6.3 && < 1.7,
    split            >= 0.2.3 && < 0.3,
    stringsearch     >= 0.3.6.6 && < 0.4,
    template-haskell >= 2.13.0 && < 2.15,
    containers       >= 0.5.11 && < 0.7,
    unix             >= 2.7.2 && < 2.8,
    utf8-string
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall

executable shh
  ghc-options: -threaded
  default-language: Haskell2010
  build-depends:
    base >=4.9,
    temporary,
    bytestring,
    deepseq,
    directory,
    shh,
    unix
  hs-source-dirs: app
  main-is: shh-app.hs

executable shh-example
  ghc-options: -threaded -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:
    base >=4.9,
    async,
    shh
  hs-source-dirs: app
  main-is: Example.hs
  

test-suite shh-tests
  ghc-options: -threaded -with-rtsopts=-N -pgmL markdown-unlit
  default-language: Haskell2010
  build-depends:
    markdown-unlit,
    base >=4.9,
    async,
    bytestring,
    directory,
    doctest,
    filepath,
    tasty,
    tasty-quickcheck,
    tasty-hunit,
    shh,
    utf8-string
  hs-source-dirs: test
  main-is: Test.hs
  other-modules: Readme
  type: exitcode-stdio-1.0
